# BulletPrompt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  cleanup-dev-env.sh  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: build-cache.yml  publish.yml
bullet/: __init__.py  client.py  utils.py
examples/: check.py  more.py  numbers.py  prompt.py  scrollbar.py  yesno.py
